# entity-data-lakehouse

./: .env.example  .gitignore  HANDOVER.md  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: README.md
airflow/dags/: entity_lakehouse_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/gold/: asset_lifecycle_predictions.sql  asset_lifecycle_predictions.yml  entity_master_current.sql  entity_master_current.yml  owner_infrastructure_exposure_snapshot.sql  owner_infrastructure_exposure_snapshot.yml  ownership_current.sql  ownership_current.yml
dbt/tests/: assert_owner_exposure_grain.sql  assert_owner_exposure_nonneg_capacity.sql  assert_ownership_current_unique_grain.sql
docs/: architecture.md  data_warehouse.md  goals_and_features.md
evals/: run_evals.py
scripts/: eval_lora.py  run_demo.py  run_pipeline.py  train_lora.py
src/entity_data_lakehouse/: api.py  bronze.py  clickhouse_sink.py  gold.py  ml.py  ml_lora.py  observability.py  pipeline.py  public_safety.py  search.py  silver.py
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: conftest.py  test_airflow_dag_import.py  test_airflow_dag_syntax.py  test_clickhouse_sink.py  test_evals.py  test_ml_lora.py  test_observability.py  test_publish_report.py  test_search.py
