[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entity-data-lakehouse"
version = "0.1.0"
description = "Compact medallion-style lakehouse demo for public entity and infrastructure data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]
dbt = [
  "dbt-core>=1.8.0",
  "dbt-duckdb>=1.8.0",
]
lora = [
  "peft>=0.10.0",
  "transformers>=4.40.0",
  "trl>=0.8.0",
  "torch>=2.3.0",
  "datasets>=2.18.0",
  "accelerate>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
